--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@lottiefiles/react-lottie-player": "^3.6.0",
+    "@supabase/supabase-js": "^2.49.4",
     "framer-motion": "^11.18.2",
     "gsap": "^3.12.5",
     "mssql": "^11.0.1",
