--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@lottiefiles/react-lottie-player": "^3.6.0",
     "framer-motion": "^11.18.2",
     "gsap": "^3.12.5",
+    "moment-timezone": "^0.5.48",
     "mssql": "^11.0.1",
     "next": "14.1.0",
     "react": "^18.2.0",
